# howto

./: .gitignore  AGENTS.md  LICENSE  PREPROMPT.md  README.md  howto.py  pyproject.toml
tests/: test_howto.py
