[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "howto"
version = "0.1.0"
description = "A minimal terminal helper that queries Ollama and executes safe commands."
requires-python = ">=3.11"

[project.scripts]
howto = "howto:main"

[tool.setuptools]
py-modules = ["howto"]
